SERVER-23003: Wait for synctail to clear the buffer.